--- a/src/index.scss
+++ b/src/index.scss
@@ -2,61 +2,82 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  justify-content: space-between; }
+  justify-content: space-between;
+}
 
 .home-feature-box .fa {
-  font-size: 6rem; }
+  font-size: 6rem;
+}
 
 .home-feature-box span {
   display: block;
   color: #111;
   font-weight: bold;
-  margin-top: 1.5rem; }
+  margin-top: 1.5rem;
+}
 
 .example-components-list li > a {
-  color: #495057; }
+  color: #495057;
+}
 
 .example-components-list li:last-child > a {
-  border-bottom: 0; }
+  border-bottom: 0;
+}
 
 .example-components-list li > a .fa {
   color: rgba(0, 0, 0, 0.35);
-  float: right; }
+  float: right;
+}
 
 .list-unstyled .list-group-item-action {
   transition: all 0.2s;
-  color: #495057; }
+  color: #495057;
+}
 
 .list-unstyled .list-group-item-action:hover {
-  transform: translateX(5px); }
+  transform: translateX(5px);
+}
 
 .list-unstyled .list-group-item-action:hover i {
-  color: #283593; }
+  color: #283593;
+}
 
-.nav-link:focus {
-  outline: none; }
+.nav-link:focus{
+  outline: none;
+}
 
 /** Additional Styles **/
 .sectionPage {
   margin-bottom: 0 !important;
-  height: 420px; }
-
+  height: 420px;
+}
 .sectionPage::after {
-  background: url("./assets/palace-of-westminster.jpg") !important;
+  background: url('./assets/palace-of-westminster.jpg') !important;
   background-position: center center;
   background-size: cover !important;
-  filter: opacity(1) !important; }
+  filter: opacity(1) !important;
+}
 
-@media (max-width: 576px) {
-  .edge-header.reduced {
-    height: 100px; } }
+.edge-header.reduced {
+  @media (max-width: 576px) {
+    height: 100px;
+  }
+}
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: antialiased;
+}
+
 
 .embed-responsive .card-img-top {
-  object-fit: cover; }
+  object-fit: cover;
+}
 
 .card-text {
-  min-height: 1.5em; }
+  min-height:1.5em;
+}
+
+.card {
+  // height: calc(100% - 55px);
+}
