--- a/src/components/ProfileCard/styles.css
+++ b/src/components/ProfileCard/styles.css
@@ -1,4 +1,4 @@
-/* .card {
+.card {
   padding-top: 20px;
   margin: 10px 0 20px 0;
   background-color: rgba(214, 224, 226, 0.2);
@@ -211,4 +211,4 @@
   border-radius: 50%;
   width: 32px;
   height: 32px;
-  line-height: 18px; } */
+  line-height: 18px; }
