delete dead code

--- a/src/index.scss
+++ b/src/index.scss
@@ -75,9 +75,9 @@ body {
 }
 
 .card-text {
-  min-height:1.5em;
+  min-height:2em;
 }
 
 .card {
-  // height: calc(100% - 55px);
+ height: 280px;
 }
