--- a/src/index.scss
+++ b/src/index.scss
@@ -71,22 +71,23 @@ body {
 
 
 .embed-responsive {
-  height: 300px;
+  height: 320px;
   .card-img-top {
     object-fit: cover;
-    // height:180px;
   }
 }
 
-.card-text {
-  min-height:2em;
-}
 
-.card { 
- height: 450px;
- .card-body {
-  .card-title {
-    height: 30px;
+.personal-profile {
+  .card { 
+    height: 450px;
+    .card-body {
+      .card-title {
+        height: 30px;
+      }
+      .card-text {
+        min-height:2em;
+      }
+    }
   }
- }
 }
